# pixi_demo

./: .gitignore  README.md  pyproject.toml
src/pixi_demo/: __init__.py  sad.py
