[project]
authors = [{name = "Priyanka O", email = "demo@users.noreply.github.com"}]
dependencies = []
name = "pixi_demo"
requires-python = ">= 3.11"
#version = "0.1.0"
dynamic = ["version"]  # Mark version as dynamic
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
pixi_demo = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.feature.dev.dependencies]
pytest = "*"
build = "*"
hatch-vcs = "*"
twine = "*"

[tool.hatch.version]
source = "vcs"  # Use version control system

[tool.hatch.build.hooks.vcs]
version-file = "src/my_awesome_package/_version.py"
